// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoEditor useCanvas should move image to top 1`] = `
[
  {
    "props": {
      "height": 300,
      "width": 400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "dHeight": 1000,
      "dWidth": 1000,
      "dx": 0,
      "dy": -15,
      "img": <img
        height="1000"
        width="1000"
      />,
      "sHeight": 1000,
      "sWidth": 1000,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`PhotoEditor useCanvas should zoom in image 1`] = `
[
  {
    "props": {
      "height": 300,
      "width": 400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "dHeight": 100,
      "dWidth": 200,
      "dx": 0,
      "dy": 0,
      "img": <img
        height="100"
        width="200"
      />,
      "sHeight": 100,
      "sWidth": 200,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;
